# video_scene_detect

./: CMakeLists.txt  Queue.h  README.md  scene_detect.cpp  scene_detect.py
